# cxxheaders

./: .gitignore  CMakeLists.txt  SharemindCxxHeadersConfig.cmake.in  SharemindCxxHeadersConfigVersion.cmake.in
src/: Add.h  AlignedAllocator.h  AlwaysFalse.h  AlwaysFalseCond.h  AlwaysFalsePred.h  AlwaysFalseType.h  AlwaysFalseTypeCond.h  AlwaysFalseTypePred.h  AlwaysTrue.h  AlwaysTrueCond.h  AlwaysTruePred.h  AlwaysTrueType.h  AlwaysTrueTypeCond.h  AlwaysTrueTypePred.h  ApplyTuples.h  AssertReturn.h  AtomicFlags.h  BitVector.h  CallStack.h  CircBufferSCSP.h  Concat.h  Concepts.h  ConfigurationInterpolation.h  ConstPackedReferences.h  ConstPackedStructAccessor.h  ConstUnalignedReference.h  CopyConst.h  CopyCv.h  CopyVolatile.h  CountMaxActor.h  CstddefLiterals.h  CstdintLiterals.h  Datum.h  DebugVerboseHandlers.h  DecayTupleSize.h  Detected.h  Durations.h  DynamicPackedStruct.h  DynamicPackingInfo.h  EnableSharedFromThis.h  (+139 more)
src/compiler-support/: ClangPR22637.h  ClangPR23383.h  ClangPR26692.h  GccInheritConstructor.h  GccInheritContructor.h  GccIsNothrowDestructible.h  GccNoreturn.h  GccPR44436.h  GccPR50025.h  GccPR53137.h  GccPR53540.h  GccPR53921.h  GccPR54277.h  GccPR54403.h  GccPR54431.h  GccPR54526.h  GccPR54947.h  GccPR55003.h  GccPR55015.h  GccPR55538.h  GccPR55853.h  GccPR55914.h  GccPR56299.h  GccPR56632.h  GccPR56646.h  GccPR57250.h  GccPR57887.h  GccPR61067.h  GccVersion.h
src/detail/: ExceptionMacros.h  UnalignedReferenceBase.h
tests/: TestAdd.cpp  TestAssertReturn.cpp  TestAssertReturn.h  TestAssertReturn_NDEBUG.cpp  TestCallStack.cpp  TestCircBufferSCSP.cpp  TestConcepts.cpp  TestCopyConst.cpp  TestCopyCv.cpp  TestCopyVolatile.cpp  TestCstddefLiterals.cpp  TestCstdintLiterals.cpp  TestDetected.cpp  TestDynamicPackedStruct.cpp  TestEnumToUnderlying.cpp  TestFuture.cpp  TestIdentifierPool.cpp  TestIndexSequence.cpp  TestIntegerLiterals.cpp  TestIntegralComparisons.cpp  TestIsPowerOfTwo.cpp  TestIsSwappable.cpp  TestIterator.cpp  TestLRU.cpp  TestMakeUnique.cpp  TestMax.cpp  TestMaybeDynamicPackedStruct.cpp  TestMaybeDynamicPackingInfo.cpp  TestMin.cpp  TestOptional.cpp  TestPackedStruct.cpp  TestRange.cpp  TestReadyOrFailedWaiter.cpp  TestReversedRange.cpp  TestReversionWrapper.cpp  TestSharedResourceMap.cpp  TestSharedTupleElementPointers.cpp  TestSimpleUnorderedStringMap.cpp  TestSize.cpp  TestStringHashTablePredicate.cpp  (+23 more)
